--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+:root {
+    --AccentColor: black;
+    --white: #ffffff;
+  }
+
 body{
     font-family: "Rubik", sans-serif;
     font-weight: 300;
@@ -14,17 +19,19 @@ body{
 } 
 /* Decorations */ 
   
-.col-xs-4 { 
+
+  
+.navButtons{
     color: white; 
-    font-size: 24px; 
+    font-size: 20px; 
     padding-bottom: 5px; 
     padding-top: 5px; 
     border-radius: 30px;
+    padding-left: 15px;
+    padding-right: 15px;
     border: none;
-} 
-  
-.navButtons{
-    background: black;
+    font-weight: 400;
+    background: var(--AccentColor);
     font-family: "Rubik", sans-serif;
 
 }
