--- a/main.css
+++ b/main.css
@@ -10,6 +10,20 @@ body{
     
 }
 
+
+
+.sideBar{
+    font-family: "Rubik", sans-serif;
+    font-size: 50px;
+    font-weight: 550;
+    margin-top: 30px;
+    text-align: center;
+
+}
+
+
+
+
 #mainColorFill{
     background-color: var(--PrimaryColor);
 }
