--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ body{
 
 .sideBar{
     font-family: "Rubik", sans-serif;
-    font-size: 50px;
+    font-size: 250%;
     font-weight: 550;
     margin-top: 30px;
     text-align: center;
@@ -49,6 +49,13 @@ body{
     display: inline-block; 
     float: none; 
 
+}
+
+
+.mainLogo{
+    max-width: 50%; height: auto; 
+    margin: auto;
+    display: block; 
 }
 
 #removePadding{
