--- a/css/trainingsection.css
+++ b/css/trainingsection.css
@@ -16,6 +16,8 @@
     border-radius: 30px;
     padding-left: 15px;
     padding-right: 15px;
+    /* margin-left: 1px; */
+    /* margin-right: 1px; */
     border: none;
     font-weight: 400;
     background: var(--white);
@@ -30,6 +32,8 @@
     font-size: 20px;
     padding-bottom: 5px;
     padding-top: 5px;
+    /* margin-left: 1px; */
+    /* margin-right: 1px; */
     border-radius: 30px;
     padding-left: 15px;
     padding-right: 15px;
